# physics-workload

./: .buildinfo  .copier-answers.yaml  .dockerignore  .env.default  .gitignore  Dockerfile  Makefile  README.html  README.md  docker-compose.yml  docker_entrypoint_django.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-apt.txt  requirements-yum.txt  search.html  searchindex.js  settings.default.ini  spreadsheet_staff_contract_cut.csv
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/physics_workload/: index.doctree
.doctrees/autoapi/physics_workload/app/: index.doctree
.doctrees/autoapi/physics_workload/core/: index.doctree
.doctrees/autoapi/physics_workload/manage/: index.doctree
.doctrees/autoapi/physics_workload/tests/: index.doctree
.doctrees/autoapi/physics_workload/users/: index.doctree
.doctrees/docs/: deployment.doctree
.github/: dependabot.yaml
.github/workflows/: build.yaml  copier.yaml  docs.yaml
_modules/: index.html
_modules/physics_workload/: manage.html
_modules/physics_workload/app/: config.html  middlewares.html  views.html
_modules/physics_workload/tests/: test_all.html
_modules/physics_workload/users/: apps.html
_sources/: README.md.txt  index.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/physics_workload/: index.rst.txt
_sources/autoapi/physics_workload/app/: index.rst.txt
_sources/autoapi/physics_workload/core/: index.rst.txt
_sources/autoapi/physics_workload/manage/: index.rst.txt
_sources/autoapi/physics_workload/tests/: index.rst.txt
_sources/autoapi/physics_workload/users/: index.rst.txt
app/: admin.py  assets.py  auth.py  style.py  urls.py  utility.py
app/fixtures/: academic_group.json  academic_year.json  assignment.json  data.json  dissertation_load_function.json  info.json  load_function.json  module.json  module_year.json  staff.json  staff_year.json  standard_load.json  task.json  task_department.json  task_module.json  task_school.json  task_year_department.json  task_year_general.json  task_year_module.json  unit.json
app/forms/: academic_group.py  assignment.py  info.py  load_function.py  staff.py  standard_load.py  task.py  unit.py
app/management/commands/: initialise.py
app/migrations/: 0001_initial.py
app/models/: __init__.py  academic_group.py  academic_year.py  assignment.py  common.py  coordinator.py  dissertation_load_function.py  info.py  load_function.py  managers.py  mixins.py  module.py  module_year.py  staff.py  staff_year.py  standard_load.py  standard_loads.py  task.py  task_department.py  task_module.py  task_school.py  task_year.py  unit.py
app/models/task/: __init__.py
app/pages/: __init__.py  academic_group.py  basic.py  info.py  load_function.py  main.py  main_menu.py  module.py  staff.py  standard_load.py  supernaut.py  task.py  unit.py
app/pages/academic_group/: __init__.py  history.py
app/pages/components/: __init__.py  headers.py  menus.py  suffixes.py  tables.py
app/pages/staff/: __init__.py  history.py
app/pages/unit/: __init__.py  history.py  task.py
app/plotly/: load_function.py
app/static/css/: custom-base.css  custom-floating-select2.css  custom-floating.css  custom-select2.css
app/static/js/: autosize.js  mathjax-inline.js
app/tables/: assignment.py  staff.py  task.py  unit.py
app/templates/: 403.html
app/templates/app/: balance_cell.html  choice_url.html  create_icon.html  create_suffix.html  deactivate_suffix.html  delete_suffix.html  edit_button.html  edit_icon.html  edit_suffix.html  footer.html  integer_cell.html  iommi_base.html  list_cell_name.html  list_cell_staff.html  modify_button.html  modify_row.html  title.html
app/templates/app/academic_group/: assignment_set.html  edit.html  edit_row.html  list.html  module_task_cell.html  task_set.html  title_create.html  title_delete.html  title_detail.html  title_edit.html  title_list.html
app/templates/app/assignment/: assignment.html
app/templates/app/basic/: privacy.html
app/templates/app/header/: create_button.html  header_unit.html  history_button.html
app/templates/app/load_function/: figure.html
app/templates/app/main_menu/: main_menu.html
app/templates/app/staff/: assignment_cell.html  assignment_set.html
app/urls/: __init__.py  academic_group.py  info.py  load_function.py  staff.py  standard_load.py  task.py  unit.py
app/views/: __init__.py  academic_group.py
autoapi/: index.html
autoapi/physics_workload/: index.html
autoapi/physics_workload/app/: index.html
autoapi/physics_workload/core/: index.html
autoapi/physics_workload/manage/: index.html
autoapi/physics_workload/tests/: index.html
autoapi/physics_workload/users/: index.html
core/: settings.py  urls.py
docs/: deployment.html  deployment.md
nginx/: app.conf  physics_workload.conf  uwsgi_params
physics-workload/tests/: test_all.py
physics_workload/: uwsgi.ini
physics_workload/app/: assets.py  auth.py  style.py  tests.py  utility.py
physics_workload/app/fixtures/: assignment.json  info.json  site.json  standard_load.json
physics_workload/app/forms/: academic_group.py  staff.py  standard_load.py  task.py  unit.py
physics_workload/app/models/: __init__.py  assignment.py  load_function.py  staff.py  task.py
physics_workload/app/pages/: load_function.py  standard_load.py  task.py
physics_workload/app/plotly/: load_function.py
physics_workload/app/tables/: assignment.py  staff.py  task.py
physics_workload/app/urls/: academic_group.py  unit.py
physics_workload/core/: settings.py  urls.py  wsgi.py
scripts/: create_default_superuser.py  import_nonunit_tasks_from_csv.py  import_staff_from_csv.py  import_tasks_from_csv.py  import_unit_tasks_from_csv.py  import_units_from_csv.py  initialise_site.py  initialise_standard_load.py  make_swm1r18_superuser.py
src/tests/: test_all.py
users/: models.py
(+249 files in other folders)
