[build-system]
requires = ["hatchling"]
build-backend="hatchling.build"

[project]
name = "physics-workload"
authors = [{name = "Sam Mangham", email = "s.mangham@soton.ac.uk"}]
description = "Tool for managing staff teaching time."
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.1.0"
requires-python = ">=3.11"
keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "asgiref>=3.8.1",
    "autopep8>=2.3.2",
    "django-faicon>=0.1.0",
    "django==5.2.1",
    "django-import-export>=4.3.5",
    "gunicorn>=23.0.0",
    "iommi==7.14.4",
    "pycodestyle>=2.12.1",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "sqlparse>=0.5.3",
    "unipath>=1.1",
    "whitenoise>=6.8.2",
    "django-model-utils>=5.0.0",
    "parso>=0.8.4",
    "django-simple-history>=3.8.0",
    "simpleeval>=1.0.3",
    "django-plotly-dash>=2.4.5",
    "dash-bootstrap-templates>=2.1.0",
    "python-ldap>=3.4.4",
    "django-auth-adfs>=1.15.0",
    "python-decouple>=3.8",
    "pandas>=2.2.3",
    "uwsgi>=2.0.29",
    "markdown>=3.8.2",
]

[project.optional-dependencies]
develop = [
    "copier>=9.8.0",
    "bump-my-version>=0.1.0",
    "check-manifest>=0.5.0",
    "copier>=9.8.0",
    "django-fastdev>=1.13.0",
    "django-pycharm-breakpoint>=0.3.0",
    "hatchling",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
    "twine",
    "wheel",
]

[project.scripts]

[project.urls]
Repository = "https://github.com/Southampton-RSG/teaching-time-tool"
Homepage = "https://github.com/Southampton-RSG/teaching-time-tool"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "teaching_time_tool/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yaml",
    "Makefile",
    "docs/**/*",
]

[tool.coverage.run]
branch = true
omit = [
    "teaching_time_tool/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["teaching_time_tool"]

[tool.hatch.build.targets.wheel]
packages = ["teaching_time_tool"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
testpaths = "teaching_time_tool/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["teaching_time_tool"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403",]
"*.py" = ["E731"]

[tool.yardang]
title = "Teaching Time Tool"
root = "README.md"
pages = []
use-autoapi = true

[tool.uv.sources]
physics-workload = { workspace = true }

[dependency-groups]
dev = [
    "physics-workload",
]

