[build-system]
requires = ["hatchling"]
build-backend="hatchling.build"

[project]
name = "physics-workload"
authors = [{name = "Sam Mangham", email = "s.mangham@soton.ac.uk"}]
description = "Tool for managing staff teaching time."
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.1.0"
requires-python = ">=3.11"
keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pytz",
    "whitenoise",
    "simpleeval",
    "asgiref",
    "uwsgi",
    "django>=5",
    "django-simple-history",
    "django-auth-adfs",
    "django-markdownify",
    "django-plotly-dash",
    "dash-bootstrap-templates",
    "iommi>=7.14.5",
    "python-ldap",
    "python-decouple",
    "pandas",
    "markdown",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "codespell>=2.4,<2.5",
    "hatchling",
    "mdformat>=0.7.22,<0.8",
    "mdformat-tables>=1",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "uv",
    "django-fastdev",
    "django-pycharm-breakpoint",
]

[project.scripts]

[project.urls]
Repository = "https://github.com/Southampton-RSG/physics-workload"
Homepage = "https://github.com/Southampton-RSG/physics-workload"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "physics_workload/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yaml",
    "Makefile",
    "docs/**/*",
    ".idea",
]

[tool.coverage.run]
branch = true
omit = [
    "physics_workload/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["physics_workload"]

[tool.hatch.build.targets.wheel]
packages = ["physics_workload"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
testpaths = "physics_workload/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["physics_workload", "app", "core", "users"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403",]
"*.py" = ["E731"]

[tool.yardang]
title = "Teaching Time Tool"
root = "README.md"
pages = []
use-autoapi = true

[tool.uv.sources]
physics-workload = { workspace = true }
